Add JVM parameters to execution of TestDataImporter